<resources>
    <string name="app_name">LoginFireBase</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="register_here">Register here</string>
    <string name="email">Email</string>
    <string name="type_password">Type password</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="create_new_account">Create new account</string>
    <string name="your_name">Your name</string>
    <string name="already_have_a_account">Already have a account?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="register_with_google">Register with google</string>
    <string name="title_activity_home">HomeActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_touch_one">Please touch one!</string>
    <string name="finish">Finish</string>
</resources>