<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <LinearLayout
        android:id="@+id/layout_input"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/register_google"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:text="@string/create_new_account"
            android:textAllCaps="true"
            android:textSize="18sp"
            app:drawableEndCompat="@drawable/icon_smile_small" />

        <EditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="50dp"
            android:backgroundTint="@color/black"
            android:hint="@string/your_name"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="50dp"
            android:backgroundTint="@color/black"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="50dp"
            android:backgroundTint="@color/black"
            android:hint="@string/type_password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/repassword_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="50dp"
            android:backgroundTint="@color/black"
            android:hint="@string/type_password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_sign_in"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:backgroundTint="#EF77B0"
            android:text="@string/register"
            android:textSize="18sp"
            app:cornerRadius="60dp"
            app:layout_constraintTop_toBottomOf="@id/layout_input" />



    </LinearLayout>

    <TextView
        android:id="@+id/register_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_with_google"
        android:textAllCaps="true"
        android:autoLink="all"
        android:textSize="16sp"
        android:textColor="#B02D58F3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_input"
        app:layout_constraintBottom_toTopOf="@id/view_half_circle"
        android:drawablePadding="5dp"
        app:drawableStartCompat="@drawable/grommet_icons_google" />

    <View
        android:id="@+id/view_half_circle"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/half_circle"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/already_have_a_account"
        android:textColor="#ccc"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/register_here"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/register_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/have_account"
        app:layout_constraintTop_toTopOf="@id/have_account" />


</androidx.constraintlayout.widget.ConstraintLayout>