<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signin.SignInActivity"
    tools:deviceIds="wear">

    <ImageView
        android:id="@+id/emoji_smile"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="100dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/icon_smile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/emoji_normal"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/icon_normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emoji_smile" />

    <ImageView
        android:id="@+id/emoji_sad"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="50dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/icon_sad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emoji_smile" />
    
    <View
        android:id="@+id/view_half_circle"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/half_circle"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_not_have_an_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/register_here"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"
        android:textColor="#ccc"
        app:layout_constraintBottom_toBottomOf="parent" />
    
    <TextView
        android:id="@+id/register_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_here"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@id/have_account"
        app:layout_constraintTop_toTopOf="@id/have_account"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emoji_sad"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginStart="50dp"
        android:backgroundTint="@color/black"
        android:layout_marginEnd="50dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_input"
        android:hint="@string/type_password"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:layout_marginStart="50dp"
        android:backgroundTint="@color/black"
        android:drawableEnd="@drawable/visible"
        android:layout_marginEnd="50dp"
        android:importantForAutofill="no" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_sign_in"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_input"
        android:text="@string/sign_in"
        app:cornerRadius="60dp"
        android:textSize="18sp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#EF77B0" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/password_input"
        app:layout_constraintStart_toStartOf="@id/password_input"
        app:layout_constraintTop_toBottomOf="@id/button_sign_in"
        android:text="@string/forgot_password"
        android:textAllCaps="true"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_with_google"
        android:textAllCaps="true"
        android:autoLink="all"
        android:textSize="16sp"
        android:textColor="#B02D58F3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password"
        app:layout_constraintBottom_toTopOf="@id/view_half_circle"
        android:drawablePadding="5dp"
        app:drawableStartCompat="@drawable/grommet_icons_google" />
    
</>